Spring demo view controllers